--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,12 @@ add_executable(Tests
         src/interquartile_range.h
         test/test.cpp # your test file
         # add your own header files below
-        )
+)
         
 target_link_libraries(Tests PRIVATE Catch2::Catch2WithMain) #link catch to test.cpp file
 # the name here must match that of your testing executable (the one that has test.cpp)
 
 # comment everything below out if you are using CLion
-include(CTest)
-include(Catch)
-catch_discover_tests(Tests) # must be named the same as your test executable
+#include(CTest)
+#include(Catch)
+#catch_discover_tests(Tests) # must be named the same as your test executable
